minikube_k8s_deployment/redis_deployment_service.yaml
# redis-db deployment configuration
apiVersion: apps/v1
kind: Deployment
metadata:
    name: redis-db
spec:
    replicas: 1
    selector:
        matchLabels:
            app: redis
            role: master
    template:
        metadata:
            labels:
                app: redis
                role: master
        spec:
            volumes:
            - name: redis-storage
              persistentVolumeClaim:
                claimName: redis-pvc
            containers:
                - name: redis-master
                  image: redis:7.2.1
                  resources:
                      limits:
                          cpu: 200m
                          memory: 200Mi
                  command:
                      - redis-server
                  args:
                      - --requirepass
                      - aiwilltakeovertheworld
                  ports:
                      - containerPort: 6379
---

#redis-db service configuration
apiVersion: v1
kind: Service
metadata:
    name: redis-db-service
    labels:
        app: redis
        role: master
spec:
    ports:
        - port: 6379
          targetPort: 6379
    selector:
        app: redis
        role: master
