minikube_k8s_deployment/web-server_deployment_service_ingress.yaml
#web-server deployment configuration
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web-server
  labels:
    app: web-server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: web-server
  template:
    metadata:
      labels:
        app: web-server
    spec:
      containers:
      - name: web-server
        image: default/emlo-web-server:assignment17-v1
        imagePullPolicy: Never
        resources:
          limits:
            memory: "200Mi"
            cpu: "500m"
        ports:
          - containerPort: 80
---

#web-server service configuration
apiVersion: v1
kind: Service
metadata:
  name: web-server-service
spec:
  #type: NodePort
  selector:
    app: web-server
  ports:
  - port: 8000
    targetPort: 80

---

#web-server ingress configuration
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: web-server-ingress
spec:
  rules:
    - host: mykube-app.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name:  web-server-service
                port:
                  number: 8000
